Bug 379971 - kmail asserts whenever I drop a mail into composer
Summary: kmail asserts whenever I drop a mail into composer
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-18 13:51 UTC by Martin Koller
Modified: 2017-05-18 14:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-05-18 13:51:29 UTC
I think this is a regression.
When creating a new mail and I'd like to drag&drop another email (e.g. from the sent-folder) into the composer, kmail asserts:

20170518 15:47:49.280 CEST kmail2 unknown line:0: ASSERT failure in FolderSettings::fallBackIdentity: "No resource found in collection", file /home/KDE5/source/kde/pim/mailcommon/src/folder/foldersettings.cpp, line 326

In the debugger I see that the resource string is an empty string.
I'm pretty sure that worked in some earlier version.

I'm using KDE-PIM master from yesterday
Comment 1 Laurent Montel 2017-05-18 14:41:51 UTC
Git commit e8dbbd11b388bc3449a5adfb9987b2498d40dbdd by Montel Laurent.
Committed on 18/05/2017 at 14:41.
Pushed by mlaurent into branch 'master'.

Fix Bug 379971 - kmail asserts whenever I drop a mail into composer

M  +10   -4    src/editor/kmcomposerwin.cpp

https://commits.kde.org/kmail/e8dbbd11b388bc3449a5adfb9987b2498d40dbdd