Fix Bug 379971 - kmail asserts whenever I drop a mail into composer

BUG: 379971